<resources>
    <string name="app_name">Beginner</string>
    <string name="tab_menu_course">课程</string>
    <string name="tab_menu_home">首页</string>
    <string name="tab_menu_community">社区</string>
    <string name="tab_menu_personalCenter">我</string>
    <!--字体-->
    <string name="add_thine">&#xe601;</string>
    <string name="add">&#xe602;</string>
    <string name="moreThick">&#xe62b;</string>
    <string name="advice">&#xe603;</string>
    <string name="check">&#xe604;</string>
    <string name="back">&#xe605;</string>
    <string name="about">&#xe606;</string>
    <string name="collection">&#xe607;</string>
    <string name="close">&#xe608;</string>
    <string name="collectioned">&#xe609;</string>
    <string name="community">&#xe60a;</string>
    <string name="down">&#xe60b;</string>
    <string name="diary">&#xe60c;</string>
    <string name="exclamation">&#xe60d;</string>
    <string name="edit">&#xe60e;</string>
    <string name="delete">&#xe60f;</string>
    <string name="feedback">&#xe610;</string>
    <string name="history">&#xe611;</string>
    <string name="image">&#xe612;</string>
    <string name="huanjiao">&#xe613;</string>
    <string name="message">&#xe614;</string>
    <string name="journal">&#xe615;</string>
    <string name="file">&#xe616;</string>
    <string name="operating">&#xe617;</string>
    <string name="play">&#xe618;</string>
    <string name="more">&#xe619;</string>
    <!--<string name="question">&#xe61a;</string>-->
    <string name="intelligent">&#xe61b;</string>
    <string name="rollback">&#xe61c;</string>
    <string name="profile">&#xe61d;</string>
    <string name="search">&#xe61e;</string>
    <!--<string name="switch">&#xe61f;</string>-->
    <string name="setting">&#xe620;</string>
    <!--<string name="triangle-down">&#xe621;</string>-->
    <string name="up">&#xe622;</string>
    <string name="add_picture">&#xe645;</string>
    <string name="online">&#xe646;</string>
    <string name="cancle">&#xe647;</string>
    <string name="add_home">&#xe648;</string>
    <string name="offline">&#xe649;</string>
    <string name="course">&#xe64f;</string>
    <!--<string name="add-friend">&#xe623;</string>-->
    <string name="contact">&#xe624;</string>
    <string name="qrcade">&#xe625;</string>
    <!--<string name="my doctor">&#xe626;</string>-->
    <string name="certificate_flag">&#xe627;</string>
    <string name="certificate_footer">&#xe628;</string>
    <string name="download">&#xe629;</string>
    <string name="time">&#xe62a;</string>
    <string name="evaluate">&#xe62c;</string>
    <string name="report">&#xe62d;</string>
    <string name="question">&#xe62e;</string>
    <string name="back1">&#xe630;</string>
    <!--人气 推荐阅读-->
    <string name="hot">人气：%1$s</string>
    <string name="enrollNumber">%1$s人参与学习</string>
    <!--Header type-->
    <string name="headerTextType">text</string>
    <string name="headerIconType">icon</string>
</resources>
